syntax = "proto3";
package post.v1;

import "google/protobuf/wrappers.proto";
import "post/v1/post.proto";

option java_multiple_files = true;
option java_package = "sean.hwang.mockstagram.content.post.api.v1";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post);
}

message CreatePostRequest {
  google.protobuf.StringValue author_id = 1;
  repeated PostForm post = 2;
}

message PostForm {
  google.protobuf.StringValue description = 1;
  repeated PostPageForm pages = 2;
}

message PostPageForm {
  google.protobuf.StringValue image_url = 1;
}
